--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@
 
 body {
     background: var(--Grey-900);
-    height: 100vh;
+    /*height: 100vh;*/
     display: flex;
     flex-direction: column;
     justify-content: center;
